MINOR: styles: Add table display fix and API header wrap

--- a/src/.vitepress/theme/styles/base/overrides.css
+++ b/src/.vitepress/theme/styles/base/overrides.css
@@ -95,6 +95,7 @@ div[class*='language-']:has(> pre):hover .copy-btn {
 
 .vp-doc table {
     border-collapse: collapse;
+    display: table;
     margin: 20px 0;
     width: 100%;
 }
